# loop-apidoc

./: .docsentry.json  .gitignore  .tagsmith.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.en.md  README.md  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
benchmarks/: .gitignore  README.md
docs/: ARCHITECTURE.md  BENCHMARK_VALIDATION_PLAN.md  CORRECTION_LOOP.md  DESIGN_DECISIONS.md  DEVELOPMENT_OPPORTUNITIES_2026-07-24.md  PIPELINE_FOLLOWUPS.md  PRODUCT_EXTENSION_ROADMAP.md  PROTOCOL_EXPANSION_DESIGN.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.10.0.md  RELEASE_NOTES_0.11.0.md  RELEASE_NOTES_0.11.1.md  RELEASE_NOTES_0.11.2.md  RELEASE_NOTES_0.12.0.md  RELEASE_NOTES_0.13.0.md  RELEASE_NOTES_0.14.0.md  RELEASE_NOTES_0.15.0.md  RELEASE_NOTES_0.16.0.md  RELEASE_NOTES_0.16.1.md  RELEASE_NOTES_0.17.0.md  RELEASE_NOTES_0.18.0.md  RELEASE_NOTES_0.19.0.md  RELEASE_NOTES_0.20.0.md  RELEASE_NOTES_0.21.0.md  RELEASE_NOTES_0.21.1.md  RELEASE_NOTES_0.22.0.md  RELEASE_NOTES_0.22.1.md  RELEASE_NOTES_0.22.2.md  RELEASE_NOTES_0.22.3.md  RELEASE_NOTES_0.22.4.md  RELEASE_NOTES_0.23.0.md  RELEASE_NOTES_0.24.0.md  RELEASE_NOTES_0.25.0.md  RELEASE_NOTES_0.26.0.md  RELEASE_NOTES_0.7.0.md  RELEASE_NOTES_0.8.0.md  RELEASE_NOTES_0.9.0.md  RELEASE_NOTES_0.9.1.md  RELEASE_NOTES_0.9.2.md  RELEASE_NOTES_0.9.3.md  (+11 more)
loop_apidoc/: __init__.py  cli.py  gitbook_llms.py  html_snapshot.py  openapi_snapshot.py  url_adapters.py  url_catalog.py  url_corpus.py
scripts/: __init__.py  quality_gate.py  release.py
tests/: conftest.py  test_assemble_integration_wiring.py  test_benchmarks.py  test_cli_assemble.py  (+49 more)
(+721 files in other folders)
