[project]
name = "loop-apidoc"
version = "0.12.0"
description = "Source-grounded API documentation pipeline for Loop Engineering"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "openapi-spec-validator>=0.7",
    "jsonschema>=4.21",
    "pymupdf>=1.24",
    "pymupdf4llm>=1.27.2.3",
]

[project.scripts]
loop-apidoc = "loop_apidoc.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loop_apidoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.report]
fail_under = 95
